added : class featuer deatils

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 lang: en
-title: Vedic Documentation
+title: Vedic Lang Documentation
 description: The documentation for Vedic, world first programming language in sanskrit.
 url: https://vedic-lang.github.io # the base hostname & protocol for your site
 twitter_username: ptprashant09
